Fix buttons block visible issue and UI

--- a/agile-frontend/WebContent/misc/emailbuilder/css/template.editor.css
+++ b/agile-frontend/WebContent/misc/emailbuilder/css/template.editor.css
@@ -300,6 +300,7 @@ div.mce-widget {
     /*min-height: 800px*/
     overflow-x: hidden;
     height: 100%;
+    padding-right: 5px;
 }
 .orderbutton {
     cursor: move;
